# Projeto-ITP-PPM

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  classes.hpp  cor.hpp  imagep3.hpp  main.cpp  pal.txt  paleta.hpp  testing.cpp
docs/html/: annotated.html  classes.html  classstc_1_1ImageP2-members.html  classstc_1_1ImageP2.html  classstc_1_1ImageP3-members.html  classstc_1_1ImageP3.html  classstc_1_1Paleta-members.html  classstc_1_1Paleta.html  cor_8hpp_source.html  dir_148e45bdeb4839f56f2e2dd4623981c5.html  dir_148e45bdeb4839f56f2e2dd4623981c5_dep.map  dir_148e45bdeb4839f56f2e2dd4623981c5_dep.md5  dir_2667cbba891394b0626cb57c4cc19774.html  dir_2667cbba891394b0626cb57c4cc19774_dep.map  dir_2667cbba891394b0626cb57c4cc19774_dep.md5  dir_29b991757baefd4c9fee1250ebc1a608.html  dir_3339dc3fb3b6edb5c9435acb2bc8a9d8.html  dir_3d92808fa12f2626801e645ad92ee4b0.html  dir_3d92808fa12f2626801e645ad92ee4b0_dep.map  dir_3d92808fa12f2626801e645ad92ee4b0_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6f4981b39efe0c398e675f834d898ff5.html  dir_6f4981b39efe0c398e675f834d898ff5_dep.map  dir_6f4981b39efe0c398e675f834d898ff5_dep.md5  dir_7ca1c03a73cecaf99bcb097fbb05ee4d.html  dir_7ca1c03a73cecaf99bcb097fbb05ee4d_dep.map  dir_7ca1c03a73cecaf99bcb097fbb05ee4d_dep.md5  (+29 more)
includes/: cor.hpp  header.hpp  imagep2.cpp  imagep2.hpp  imagep3.hpp  paleta.hpp
src/: main.cpp  pal.txt
(+35 files in other folders)
